# Face_Recog_Co-design

Hardware/: FP_AddSub.bsf  FP_AddSub.cmp  FP_AddSub.inc  FP_AddSub.qip  FP_AddSub.v  FP_AddSub_bb.v  FP_AddSub_inst.v  FP_AddSub_syn.v  FP_Mult.bsf  FP_Mult.cmp  FP_Mult.inc  FP_Mult.qip  FP_Mult.v  FP_Mult_bb.v  FP_Mult_inst.v  FP_Mult_syn.v  FP_test.bsf  FP_test.cmp  FP_test.qip  FP_test.sip  FP_test.spd  FP_test.vhd  FP_test_sim.f  FPreg.sv  ProjReg.sv  amm_master_qsys_with_pcie.qsys  amm_master_qsys_with_pcie.sopcinfo  master_example.qarlog  master_example.qsf  master_example.sv  master_example_assignment_defaults.qdf  outputlogic.sv  p_reg.sv  regx8.sv  top_levelu.sv  top_levelu.sv.bak  user_module.sv.bak
Hardware/.qsys_edit/: amm_master_qsys_with_pcie_schematic.nlv  preferences.xml
Hardware/amm_master_qsys_with_pcie/: amm_master_qsys_with_pcie.bsf  amm_master_qsys_with_pcie.cmp  amm_master_qsys_with_pcie.csv  amm_master_qsys_with_pcie.html  amm_master_qsys_with_pcie.spd  amm_master_qsys_with_pcie.xml  amm_master_qsys_with_pcie_bb.v  amm_master_qsys_with_pcie_generation.rpt  amm_master_qsys_with_pcie_generation_previous.rpt  amm_master_qsys_with_pcie_inst.v  amm_master_qsys_with_pcie_inst.vhd
Hardware/db/: .cmp.kpt  a_dpfifo_1c41.tdf  a_dpfifo_8d41.tdf  add_sub_14f.tdf  add_sub_33f.tdf  add_sub_44f.tdf  add_sub_4hj.tdf  add_sub_88e.tdf  add_sub_ekh.tdf  (+912 more)
Software/: CMakeCache.txt  CMakeLists.txt  Makefile  acp.cpp  acp.h  autofaces.cpp  autofaces.h  cmake_install.cmake  face_recog.pro  face_recog.pro.user.2.5pre1  main  main.cpp  meanR.txt
att_faces/: names.csv
(+183 files in other folders)
