cmake_minimum_required(VERSION 2.8)
project(face_recog)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
find_package(OpenCV REQUIRED)
add_library(PCIE PCIE.c PCIE.h)
add_library(autofaces autofaces.cpp autofaces.h)
add_library(apc apc.cpp apc.h)
add_executable(main main.cpp)
target_link_libraries(main ${OpenCV_LIBS} PCIE autofaces apc)
